# human_multiview

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  pyproject.toml
docs/: index.html
docs/static/css/: style.css
docs/static/data/: chart_data.json
docs/static/data/attention/: manifest.json
docs/static/data/demo/: trial_meta.json
docs/static/data/demo_trials/: manifest.json
docs/static/data/greenhouse_cameras/: camera_poses.json
docs/static/data/headcam_cameras/: camera_poses.json  motion_signals.json
docs/static/js/: camera_viz.js  main.js
docs/static/media/: headcam_example.mov
human_multiview/: __init__.py  attention.py  config.py  data.py  evaluate.py  plotting.py
human_multiview/models/: __init__.py  base.py  dinov2.py  dust3r.py  mast3r.py  pi3.py  vggt.py
notebooks/: 01_main_results.ipynb  02_layer_analysis.ipynb  03_attention_visualization.ipynb
scripts/: merge_results.py  run_attention.py  run_evaluation.py
